# advanced-ocr

./: .gitignore  Cargo.toml  Makefile
.docs/: 00-later (extract_with_confidence).md  00-later (translator)-ai.md  00-later (translator).md  01-initial.md  02-multilang.md
src/: file_processors.rs  main.rs  ocr_engine.rs  pdf_creator.rs  utils.rs
