[package]
name = "advanced_ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
## Core OCR
#tesseract = "0.15.2"
rusty-tesseract = "1.1.10"

# Image processing
image = "0.25.9"
imageproc = "0.26.0"

# PDF processing
pdf = "0.9.1"
pdf-extract = "0.10.0"
pdf-writer = "0.14.0"
poppler = "0.6" # to convert pdf to image

# Office documents (DOCX, XLSX)
calamine = "0.32.0"  # For Excel files (XLSX, XLS)
docx-rs = "0.4.18"    # For DOCX files

# File system and parallelism
walkdir = "2.5"
rayon = "1.11"

# Progress indication
indicatif = "0.18.3"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
csv = "1.4"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Для кешування
cached = "0.56.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Compression (for archives in future)
zip = "7.2.0"
#tar = "0.4"
flate2 = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
