[package]
name = "advanced_ocr"
version = "0.3.1"
edition = "2024"

[dependencies]
# Image processing
image = "0.25.9"

# Languages detection
whatlang = "0.18.0"

# PDF processing
pdf = "0.9.1"
pdf-extract = "0.10.0"

# For native Rust PDF creation
pdf-writer = "0.14.0"

# For checking if installed required tools/packages
which = "8.0.0"

# Office documents (DOCX, XLSX)
calamine = "0.32.0"  # For Excel files (XLSX, XLS)
docx-rs = "0.4.18"    # For DOCX files

# File system and parallelism
walkdir = "2.5"
rayon = "1.11"

# Progress indication
indicatif = { version = "0.18.3", features = ["rayon"] }

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
csv = "1.4"

# Logging
log = "0.4"
env_logger = "0.11.8"

# Для кешування
cached = "0.56.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Compression (for archives in future)
zip = "7.2.0"
#tar = "0.4"
flate2 = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
